--- a/index.html
+++ b/index.html
@@ -1,72 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is a title</title>
+    <title>Trusilla Moranga</title>
     <link rel='stylesheet' type="text/css" href=css/styles.css
-</head>
-<style
-.sec1
-.sec2
-.sec3
-.sec4 ></style>
+ </head>
 
 <body>
-
     <!-- This is a NavBar  -->
+    <div class=NavBar>
+        <button>Menu</button>
     <nav>
         <ul>
-            <li>page 1</li>
-            <li>page 2</li>
-            <li>page 3</li>
-          </ul>
+            <li><a href="/pages/second-page.html">Second Page</a></li>
+            <li><a href="https://www.youtube.com/">YouTube</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
+        </ul>
     </nav>
+    </div>
+    <div class="dropdown">
+        <!-- This is the search bar-->
+        <form class = searchBar>
+            <input type="text" name="search" placeholder="Search..">
+          </form>
+          
+    </div>
     <!-- This is a header -->
-    <header>This is a header</header>
-        </div>
 
-    <div>
-    <div>
-         <!-- this is paragraph -->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis iaculis leo feugiat pulvinar. Donec ac eros vel nulla auctor accumsan. Praesent iaculis placerat nibh quis scelerisque. Donec in ipsum ac lectus dictum laoreet. Quisque in lacus eu eros fermentum tincidunt non a est. Integer sit amet leo at quam vehicula feugiat eu ultricies nisl. Quisque dictum tristique sollicitudin. Curabitur tempor mi in mauris commodo consectetur.
+    <header>
+        <h1>
+            Trusilla Moranga
+        </h1>
+    </header>
+    <section class="sec1">
+    <div class="about-me">
+        <!-- this is paragraph -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis iaculis leo feugiat pulvinar. Donec
+            ac eros vel nulla auctor accumsan. Praesent iaculis placerat nibh quis scelerisque. Donec in ipsum ac lectus
+            dictum laoreet. Quisque in lacus eu eros fermentum tincidunt non a est. Integer sit amet leo at quam
+            vehicula feugiat eu ultricies nisl. Quisque dictum tristique sollicitudin. Curabitur tempor mi in mauris
+            commodo consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis iaculis leo feugiat pulvinar. Donec
+            ac eros vel nulla auctor accumsan. Praesent iaculis placerat nibh quis scelerisque. Donec in ipsum ac lectus
+            dictum laoreet. Quisque in lacus eu eros fermentum tincidunt non a est. Integer sit amet leo at quam
+            vehicula feugiat eu ultricies nisl.
 
         </p>
     </div>
-    <div>
+    <div class="Tru-Pic">
         <!-- this is an image -->
-        <img src=https://i.picsum.photos/id/599/200/200.jpg?hmac=2WLKs3sxIsaEQ-6WZaa6YMxgl6ZC4cNnid0aqupm2is" alt="A picture of some moutains surounded by clouds">
+        <img src="./images/TMM.jpg" alt="">
     </div>
     </div>
+    </section>
     <div>
         <!-- This is a paragraph -->
-        <p>Nulla fringilla vestibulum dui, vitae tristique odio pretium eget. Phasellus semper lacus id tellus ultrices, quis tristique mauris viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin eget fermentum est, at semper nisi. Fusce tristique eleifend nibh in laoreet. Aenean ultricies lobortis tellus, a auctor nulla iaculis in. In et eros et sem ultrices blandit. In id leo sed dui fermentum eleifend eu vel libero.
+        <p>Nulla fringilla vestibulum dui, vitae tristique odio pretium eget. Phasellus semper lacus id tellus ultrices,
+            quis tristique mauris viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+            cubilia curae; Proin eget fermentum est, at semper nisi. Fusce tristique eleifend nibh in laoreet. Aenean
+            ultricies lobortis tellus, a auctor nulla iaculis in. In et eros et sem ultrices blandit. In id leo sed dui
+            fermentum eleifend eu vel libero.
 
-            Pellentesque sed turpis rutrum, fermentum risus sit amet, ultrices purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc in ipsum consequat nunc accumsan cursus. Etiam vitae laoreet nibh. Praesent blandit purus at ex porttitor, ut interdum nibh egestas. Maecenas rutrum laoreet sem, id finibus eros pretium vel. Morbi est eros, laoreet sit amet eleifend bibendum, luctus vitae orci. Sed porttitor eros felis, laoreet venenatis mauris iaculis in. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras vehicula scelerisque ipsum sit amet condimentum. Integer maximus scelerisque elit, vitae fringilla risus elementum et. Mauris dignissim convallis diam, et venenatis massa.
-            
-            Morbi varius dolor ac lacus semper feugiat. Fusce at nisl sit amet eros sodales consectetur sit amet in justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ipsum magna, pulvinar sed risus et, sagittis consequat risus. Aenean varius ullamcorper laoreet. Fusce a tincidunt urna, a cursus mauris. Cras quis dolor sit amet diam porttitor laoreet. Proin et lacus ut mi mollis pharetra. Nunc varius nunc augue, eu sagittis tellus dignissim vitae. Sed ante turpis, ultrices et lectus sit amet, tempus eleifend eros. Nullam fringilla justo vel est euismod, a commodo tellus malesuada. Cras nec sapien ut felis tempus aliquam vel vitae sapien. Ut ante neque, efficitur in molestie non, fermentum vel leo. Etiam sit amet egestas lorem. Nulla sit amet elit quis ipsum bibendum consequat vel id neque.</p>
+            Pellentesque sed turpis rutrum, fermentum risus sit amet, ultrices purus. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos. Nunc in ipsum consequat nunc accumsan cursus.
+            Etiam vitae laoreet nibh. Praesent blandit purus at ex porttitor, ut interdum nibh egestas. Maecenas rutrum
+            laoreet sem, id finibus eros pretium vel. Morbi est eros, laoreet sit amet eleifend bibendum, luctus vitae
+            orci. Sed porttitor eros felis, laoreet venenatis mauris iaculis in. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia curae; Cras vehicula scelerisque ipsum sit amet
+            condimentum. Integer maximus scelerisque elit, vitae fringilla risus elementum et. Mauris dignissim
+            convallis diam, et venenatis massa.
+
+            Morbi varius dolor ac lacus semper feugiat. Fusce at nisl sit amet eros sodales consectetur sit amet in
+            justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
+            ipsum magna, pulvinar sed risus et, sagittis consequat risus. Aenean varius ullamcorper laoreet. Fusce a
+            tincidunt urna, a cursus mauris. Cras quis dolor sit amet diam porttitor laoreet. Proin et lacus ut mi
+            mollis pharetra. Nunc varius nunc augue, eu sagittis tellus dignissim vitae. Sed ante turpis, ultrices et
+            lectus sit amet, tempus eleifend eros. Nullam fringilla justo vel est euismod, a commodo tellus malesuada.
+            Cras nec sapien ut felis tempus aliquam vel vitae sapien. Ut ante neque, efficitur in molestie non,
+            fermentum vel leo. Etiam sit amet egestas lorem. Nulla sit amet elit quis ipsum bibendum consequat vel id
+            neque.Nulla fringilla vestibulum dui, vitae tristique odio pretium eget. Phasellus semper lacus id tellus ultrices,
+            quis tristique mauris viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+            cubilia curae; Proin eget fermentum est, at semper nisi. Fusce tristique eleifend nibh in laoreet. Aenean
+            ultricies lobortis tellus, a auctor nulla iaculis in. In et eros et sem ultrices blandit. In id leo sed dui
+            fermentum eleifend eu vel libero.
+
+            Pellentesque sed turpis rutrum, fermentum risus sit amet, ultrices purus. Class aptent taciti sociosqu ad
+            litora torquent per conubia nostra, per inceptos himenaeos. Nunc in ipsum consequat nunc accumsan cursus.
+            Etiam vitae laoreet nibh. Praesent blandit purus at ex porttitor, ut interdum nibh egestas. Maecenas rutrum
+            laoreet sem, id finibus eros pretium vel. Morbi est eros, laoreet sit amet eleifend bibendum, luctus vitae
+            orci. Sed porttitor eros felis, laoreet venenatis mauris iaculis in. Vestibulum ante ipsum primis in
+            faucibus orci luctus et ultrices posuere cubilia curae; Cras vehicula scelerisque ipsum sit amet
+            condimentum. Integer maximus scelerisque elit, vitae fringilla risus elementum et. Mauris dignissim
+            convallis diam, et venenatis massa.
+
+            Morbi varius dolor ac lacus semper feugiat. Fusce at nisl sit amet eros sodales consectetur sit amet in
+            justo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec
+            ipsum magna, pulvinar sed risus et, sagittis consequat risus. Aenean varius ullamcorper laoreet. Fusce a
+            tincidunt urna, a cursus mauris. Cras quis dolor sit amet diam porttitor laoreet. Proin et lacus ut mi
+            mollis pharetra. Nunc varius nunc augue, eu sagittis tellus dignissim vitae. Sed ante turpis, ultrices et
+            lectus sit amet, tempus eleifend eros. Nullam fringilla justo vel est euismod, a commodo tellus malesuada.
+            Cras nec sapien ut felis tempus aliquam vel vitae sapien. Ut ante neque, efficitur in molestie non,
+            fermentum vel leo. Etiam sit amet egestas lorem. Nulla sit amet elit quis ipsum bibendum consequat vel id
+            neque.</p>
     </div>
+    <br>
     <div>
         <!-- add vid here -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_W0bSen8Qjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_W0bSen8Qjg" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </div>
     <div>
-        <form action="/action_page.php" autocomplete="on"></form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname"><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email">
-        <br><br>
-        <input type="submit" value="Submit">
+        <form autocomplete="on">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname"><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email">
+            <br><br>
+            <input type="submit" value="Submit">
+        </form>
     </div>
-    <footer>
+    <div class="div-footer"
+    <footer id="contact-me">
         <!-- Footer with Linkedin link, Github link, email -->
         <a href="url">linkedin</a>
         <a href="url">github</a>
-        <p>email</p>
+        <a href="url">email</a>
     </footer>
+</div>
 </body>
-</html>
+</html> 
