--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <input type="submit" value="Submit">
         </form>
     </div>
-    <div class="div-footer"
+    <div class="div-footer"></div>
     <footer id="contact-me">
         <!-- Footer with Linkedin link, Github link, email -->
         <a href="url">linkedin</a>
